--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -58,14 +58,8 @@
       <error statusCode="404" redirect="~/site_specific/filenotfound.htm" />
       <error statusCode="403" redirect="~/site_specific/authorizationfailed.htm" />
     </customErrors>
-    <compilation debug="true">
-      <assemblies>
-        <add assembly="System.Design, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
-      </assemblies>
-    </compilation>
-    <authentication mode="None">
-      <forms loginUrl="/Account/Login.aspx" />
-    </authentication>
+    <compilation debug="true"/>
+    <authentication mode="None" />
     <siteMap enabled="true" defaultProvider="OneSiteMapProvider">
       <providers>
         <clear />
@@ -220,22 +214,36 @@
   </entityFramework>
   <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
     <core>
-      <css defaultMinifier="YuiCssMinifier">
-        
-        
-        
-        
+      <css defaultMinifier="NullMinifier">
       <minifiers>
-					
-				<add name="YuiCssMinifier" type="BundleTransformer.Yui.Minifiers.YuiCssMinifier, BundleTransformer.Yui" /><add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /></minifiers><translators>
-					
-				<add name="SassAndScssTranslator" type="BundleTransformer.SassAndScss.Translators.SassAndScssTranslator, BundleTransformer.SassAndScss" /><add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" /></translators><fileExtensions>
-					
-				<add fileExtension=".sass" assetTypeCode="Sass" /><add fileExtension=".scss" assetTypeCode="Scss" /><add fileExtension=".css" assetTypeCode="Css" /></fileExtensions><postProcessors>
+				<add name="YuiCssMinifier"  type="BundleTransformer.Yui.Minifiers.YuiCssMinifier, BundleTransformer.Yui" />
+        <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+      </minifiers>
+      <translators>		
+				<add name="SassAndScssTranslator" type="BundleTransformer.SassAndScss.Translators.SassAndScssTranslator, BundleTransformer.SassAndScss" />
+        <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
+      </translators>
+      <fileExtensions>		
+				<add fileExtension=".sass" assetTypeCode="Sass" />
+        <add fileExtension=".scss" assetTypeCode="Scss" />
+        <add fileExtension=".css" assetTypeCode="Css" />
+      </fileExtensions>
+        <postProcessors>
 					<add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
 				</postProcessors>
       </css>
-      
+      <js defaultMinifier="NullMinifier">
+      <minifiers>		
+				<add name="YuiJsMinifier" type="BundleTransformer.Yui.Minifiers.YuiJsMinifier, BundleTransformer.Yui" />
+        <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+      </minifiers>
+        <translators>
+					<add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
+				</translators>
+        <fileExtensions>
+					<add fileExtension=".js" assetTypeCode="JavaScript" />
+				</fileExtensions>
+      </js>
     </core>
   </bundleTransformer>
 </configuration>
