slimmage bamboo fix dropdown
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@213 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -42,7 +42,7 @@
     <imageOptimisation enabled="false" maxWidth="1000" maxHeight="1000" factor="1" widthParam="w" heightParam="h" />
   </fiftyOne>
   <system.web>
-    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="en-US" culture="sl-SI" />
+    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="en-US" culture="en-US" />
     <pages validateRequest="false" enableEventValidation="false" viewStateEncryptionMode="Never" enableViewStateMac="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
       <namespaces>
         <add namespace="System.Web.Optimization" />
