added default 404 setting that works (relative path)
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@217 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -118,6 +118,10 @@
     <staticContent>
       <clientCache cacheControlMaxAge="7.00:00:00" cacheControlMode="UseMaxAge" />
     </staticContent>
+   <httpErrors>
+        <remove statusCode="404" subStatusCode="-1" />
+        <error statusCode="404" prefixLanguageFilePath="" path="site_specific\404.html" responseMode="File" />
+    </httpErrors>
   </system.webServer>
   <system.net>
     <mailSettings>
