--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -35,14 +35,14 @@
   </urlrewritingnet>
   <appSettings file="LocalAppSettings.config" />
   <connectionStrings configSource="LocalConnectionStrings.config" />
-  <fiftyOne>
+  <fiftyOne> 
     <redirect firstRequestOnly="true" mobileHomePageUrl="http://zrszm.t.renderspace.net" timeout="20" devicesFile="~/App_Data/Devices.dat" mobilePagesRegex="/(Mobile)/" />
     <log logFile="~/App_Data/Log.txt" logLevel="Info" />
     <detection binaryFilePath="~/App_Data/51Degrees.dat" />
     <imageOptimisation enabled="false" maxWidth="1000" maxHeight="1000" factor="1" widthParam="w" heightParam="h" />
   </fiftyOne>
   <system.web>
-    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="en-US" culture="en-US" />
+    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" uiCulture="en-US" culture="sl-SI" />
     <pages validateRequest="false" enableEventValidation="false" viewStateEncryptionMode="Never" enableViewStateMac="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
       <namespaces>
         <add namespace="System.Web.Optimization" />
