--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -35,8 +35,8 @@
   </urlrewritingnet>
   <appSettings file="LocalAppSettings.config" />
   <connectionStrings configSource="LocalConnectionStrings.config" />
-  <fiftyOne> 
-    <redirect firstRequestOnly="true" mobileHomePageUrl="http://zrszm.t.renderspace.net" timeout="20" devicesFile="~/App_Data/Devices.dat" mobilePagesRegex="/(Mobile)/" />
+  <fiftyOne>
+    <redirect firstRequestOnly="true" mobileHomePageUrl="" timeout="20" devicesFile="~/App_Data/Devices.dat" />
     <log logFile="~/App_Data/Log.txt" logLevel="Info" />
     <detection binaryFilePath="~/App_Data/51Degrees.dat" />
     <imageOptimisation enabled="false" maxWidth="1000" maxHeight="1000" factor="1" widthParam="w" heightParam="h" />
