performed Update-Package added logging of UserAgent in global.asax.cs is log4net debug is enabled.
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@234 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -57,7 +57,7 @@
       <error statusCode="404" redirect="~/site_specific/filenotfound.htm" />
       <error statusCode="403" redirect="~/site_specific/authorizationfailed.htm" />
     </customErrors>
-    <compilation debug="true"/>
+    <compilation debug="true" />
     <authentication mode="None" />
     <siteMap enabled="true" defaultProvider="OneSiteMapProvider">
       <providers>
@@ -82,6 +82,7 @@
     <modules runAllManagedModulesForAllRequests="true">
       <remove name="FormsAuthenticationModule" />
       <remove name="UrlRewriteModule" />
+	  <add name="SqlDependencyModule" type="Zlatko.SqlDependencyModule" />
       <add name="UrlRewriteModule" type="UrlRewritingNet.Web.UrlRewriteModule, UrlRewritingNet.UrlRewriter" />
     </modules>
     <handlers>
@@ -203,6 +204,10 @@
         <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="BundleTransformer.Core" publicKeyToken="973c344c93aac60d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.9.22.0" newVersion="1.9.22.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -219,7 +224,7 @@
     <core>
       <css defaultMinifier="NullMinifier">
       <minifiers>
-				<add name="YuiCssMinifier"  type="BundleTransformer.Yui.Minifiers.YuiCssMinifier, BundleTransformer.Yui" />
+				<add name="YuiCssMinifier" type="BundleTransformer.Yui.Minifiers.YuiCssMinifier, BundleTransformer.Yui" />
         <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
       </minifiers>
       <translators>		
