force download now possible
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@236 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Model\Web\PagedList.cs" />
     <Compile Include="Model\Web\PublishableInternalContent.cs" />
     <Compile Include="Paths\CustomRouteHandler.cs" />
+    <Compile Include="Paths\DownloadHandler.cs" />
     <Compile Include="Paths\MimeMapping.cs" />
     <Compile Include="Paths\OneSiteMapProvider.cs" />
     <Compile Include="Paths\RedirectModule.cs" />
