force download now possible
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@236 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -82,7 +82,6 @@
     <modules runAllManagedModulesForAllRequests="true">
       <remove name="FormsAuthenticationModule" />
       <remove name="UrlRewriteModule" />
-	  <add name="SqlDependencyModule" type="Zlatko.SqlDependencyModule" />
       <add name="UrlRewriteModule" type="UrlRewritingNet.Web.UrlRewriteModule, UrlRewritingNet.UrlRewriter" />
     </modules>
     <handlers>
@@ -98,7 +97,7 @@
       <add path="*.pdf" name="pdf" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.xls" name="xls" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.xlsx" name="xlsx" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
-      <add path="*.mp3" name="mp3" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
+      
       <add path="*.doc" name="doc" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.docx" name="docx" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       <add path="*.pps" name="pps" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
@@ -114,7 +113,13 @@
       <add path="*.woff" name="woff" verb="GET,HEAD,POST" type="System.Web.StaticFileHandler" />
       
       
-    <add name="SassAssetHandler" path="*.sass" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" /><add name="ScssAssetHandler" path="*.scss" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" /></handlers>
+      <add path="*.mp3" name="mp3" verb="GET,HEAD,POST" type="One.Net.BLL.Paths.DownloadHandler" />
+      
+      
+      
+      <add name="SassAssetHandler" path="*.sass" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" />
+      <add name="ScssAssetHandler" path="*.scss" verb="GET" type="BundleTransformer.SassAndScss.HttpHandlers.SassAndScssAssetHandler, BundleTransformer.SassAndScss" resourceType="File" preCondition="" />
+    </handlers>
     <staticContent>
       <clientCache cacheControlMaxAge="7.00:00:00" cacheControlMode="UseMaxAge" />
     </staticContent>
