Additional log points
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@241 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -13,9 +13,11 @@
       <section name="imageOptimisation" type="FiftyOne.Foundation.Mobile.Configuration.ImageOptimisationSection, FiftyOne.Foundation" requirePermission="false" allowDefinition="Everywhere" restartOnExternalChanges="false" allowExeDefinition="MachineToApplication" />
     </sectionGroup>
     
-  <sectionGroup name="bundleTransformer">
-			
-		<section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" /><section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" /><section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" /></sectionGroup><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+	<sectionGroup name="bundleTransformer">
+		<section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" />
+		<section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" />
+		<section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
+	</sectionGroup><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <rssConfiguration>
     <providers>
       <add name="Articles" type="One.Net.BLL.RSSProviderSQL" listItemsMethod="[dbo].[ListArticlesForRss]" listCategoriesMethod="[dbo].[ListArticleCategoriesForRss]" connectionString="MsSqlConnectionString" />
@@ -32,6 +34,28 @@
       <add name="MainRedirect" provider="TURLProvider" />
     </rewrites>
   </urlrewritingnet>
+	<log4net debug="true">
+		<appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender,log4net">
+			<param name="File" value="c:\\iis_sites\\zivimlajf.w.renderspace.net\\zivimlajf.log"/>
+			<param name="AppendToFile" value="true"/>
+			<rollingStyle value="Date"/>
+			<datePattern value="yyyyMMdd"/>
+			<layout type="log4net.Layout.PatternLayout,log4net">
+				<param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n"/>
+			</layout>
+		</appender>
+		<root>
+			<priority value="DEBUG"/>
+			<appender-ref ref="LogFileAppender"/>
+		</root>
+		<category name="VFSSiteMapProvider"><priority value="DEBUG"/></category>
+		<category name="TRewriteRule"><priority value="DEBUG"/></category>
+		<category name="Global"><priority value="DEBUG"/></category>
+		<category name="PresentBasePage"><priority value="DEBUG"/></category>
+		<category name="OneMainWeb.Controls.MenuGroup"><priority value="DEBUG"/></category>
+		<category name="One.Net.BLL.OCache"><priority value="OFF"/></category>
+		<category name="One.Net.BLL.BWebsite"><priority value="DEBUG"/></category>
+	</log4net>  
   <appSettings file="LocalAppSettings.config" />
   <connectionStrings configSource="LocalConnectionStrings.config" />
   <fiftyOne>
