og:type", "website
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@242 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/OneMainWeb.csproj
+++ b/OneMainWeb/OneMainWeb.csproj
@@ -791,7 +791,6 @@
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="site_specific\aspx_templates\demo.aspx" />
-    <Content Include="site_specific\custom_modules\CookieConsent.ascx" />
     <Content Include="site_specific\_css\default.html" />
     <Content Include="site_specific\_js\default.html" />
     <Content Include="Utils\MenuGroups.asmx" />
@@ -897,6 +896,7 @@
     <Folder Include="adm\ashx\" />
     <Folder Include="App_Data\" />
     <Folder Include="App_GlobalResources\" />
+    <Folder Include="site_specific\custom_modules\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BLL\BLL.csproj">
