og:type", "website
git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@242 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Web.config
+++ b/OneMainWeb/Web.config
@@ -23,17 +23,16 @@
       <add name="Articles" type="One.Net.BLL.RSSProviderSQL" listItemsMethod="[dbo].[ListArticlesForRss]" listCategoriesMethod="[dbo].[ListArticleCategoriesForRss]" connectionString="MsSqlConnectionString" />
     </providers>
   </rssConfiguration>
+    <!--
   <urlrewritingnet rewriteOnlyVirtualUrls="true" contextItemsPrefix="QueryString" xmlns="http://www.urlrewriting.net/schemas/config/2006/07">
     <providers>
       <add name="TURLProvider" type="One.NET.BLL.TURLProvider" securityTrimmingEnabled="true" />
     </providers>
     <rewrites>
-      <!-- add name="backslashRedir" provider="RegEx" virtualUrl="^(?!~/adm).*\/$" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/$1" redirect="Application" ignoreCase="true" />   ~/(.*)/$ -->
-      <!-- add name="AdminRedir" provider="RegEx" virtualUrl="^/adm" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/adm/structure.aspx" redirect="None" ignoreCase="true" / -->
       <add name="svetavladarRedir" provider="RegEx" virtualUrl="^/(?!_files)(_.*)+" rewriteUrlParameter="ExcludeFromClientQueryString" destinationUrl="~/site_specific/$1" redirect="None" ignoreCase="true" />
       <add name="MainRedirect" provider="TURLProvider" />
     </rewrites>
-  </urlrewritingnet>
+  </urlrewritingnet> -->
 	<log4net debug="true">
 		<appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender,log4net">
 			<param name="File" value="c:\\iis_sites\\zivimlajf.w.renderspace.net\\zivimlajf.log"/>
@@ -89,7 +88,7 @@
         <add name="AspNetXmlSiteMapProvider" siteMapFile="Web.sitemap" securityTrimmingEnabled="true" type="System.Web.XmlSiteMapProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
         <add name="OneSiteMapProvider" type="One.Net.BLL.OneSiteMapProvider" securityTrimmingEnabled="false" connectionStringName="SiteMapConnectionString" />
       </providers>
-    </siteMap>
+    </siteMap> 
     <httpModules>
       <add name="UrlRewriteModule" type="UrlRewritingNet.Web.UrlRewriteModule, UrlRewritingNet.UrlRewriter" />
     </httpModules>
